[build-system]
# Must be kept in sync with `setup_requirements` in `setup.py`
requires = [
    "setuptools>=42.0.0",
    "wheel",
    "setuptools-rust",
]
# Point to the setuptools' PEP517 build backend explicitly to
# disable Pip's fallback guessing
build-backend = "setuptools.build_meta"

[tool.ruff]
ignore = ['N818']
select = ['E', 'F', 'I', 'N', 'W', 'UP', 'RUF']
line-length = 79

[tool.ruff.isort]
known-first-party = ["bcrypt", "tests"]

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
strict_equality = true
