[metadata]
name = bcrypt
version = attr: bcrypt.__about__.__version__
description = Modern password hashing for your software and your servers
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache License, Version 2.0
license_file = LICENSE
url = https://github.com/pyca/bcrypt/
author = The Python Cryptographic Authority developers
author_email = cryptography-dev@python.org
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.6
include_package_data = True
zip_safe = False
package_dir =
    =src
packages =
	bcrypt
ext_package = bcrypt
# `install_requires` must be kept in sync with `pyproject.toml`
install_requires =
    cffi>=1.1

[options.extras_require]
tests =
	pytest>=3.2.1,!=3.3.0
typecheck =
	mypy
