[package]
name = "bcrypt-rust"
version = "0.1.0"
authors = ["The bcrypt developers <cryptography-dev@python.org>"]
edition = "2018"
publish = false

[dependencies]
pyo3 = { version = "0.18.3" }
bcrypt = "0.13"
bcrypt-pbkdf = "0.8.1"
base64 = "0.13.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "bcrypt_rust"
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
overflow-checks = true
