[package]
name = "bcrypt-rust"
version = "0.1.0"
authors = ["The bcrypt developers <cryptography-dev@python.org>"]
edition = "2018"
publish = false

[dependencies]
pyo3 = { version = "0.20.0", features = ["abi3-py37"] }
bcrypt = "0.15"
bcrypt-pbkdf = "0.10.0"
base64 = "0.21.5"
subtle = "2.5"
getrandom = "0.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "bcrypt_rust"
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
overflow-checks = true
